# gha-sec-feed-eval

./: .gitignore  .lychee.toml  AGENTS.md  AGENT_REQUESTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Makefile  NOTICE  README.md  pyproject.toml
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: actionlint.yaml  bump-my-version.yaml  codeql.yaml  eval-dispatch.yaml  eval.yaml  gitleaks.yaml  links-fail-fast.yaml  osv-scanner.yaml  publish-release.yaml  sbom.yaml  tag-release.yaml  trivy.yaml  validate.yaml
categories/: default.yaml
changelog.d/: 20260601_glossary_trim.md  20260601_phase_2b.md  20260601_scaffold.md  20260604_dependabot_groups.md
docs/: GLOSSARY.md  architecture.md  categories.md  consumer-guide.md  contracts.md  refresh-vendored-data.md  scoring.md
docs/SBOM/: github-depgraph.spdx.json  syft-scan.spdx.json
src/gha_sec_feed_eval/: __init__.py  __main__.py  cli.py  config.py  filter.py  http_client.py  loader.py  models.py  scoring.py  writer.py
src/gha_sec_feed_eval/enrich/: __init__.py  attack.py  d3fend.py  epss.py
tests/: test_cli.py  test_config.py  test_enrich_attack.py  test_enrich_d3fend.py  test_enrich_epss.py  test_filter.py  test_http_client.py  test_loader.py  test_models.py  test_scoring.py  test_smoke.py  test_writer.py
tests/fixtures/: feed-min.jsonl
